--- a/UDEMY/03-CSS-Fundamentals/style.css
+++ b/UDEMY/03-CSS-Fundamentals/style.css
@@ -110,3 +110,30 @@ li:nth-child(odd) {
 li:nth-child(even) {
   /* color: peru; */
 }
+/* Misconception: this won't work! */
+article p:first-child {
+  color: blue;
+}
+
+/* Styling links */
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  /* color: #777; */
+  color: #1098ad;
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline orangered;
+}
+
+a:active {
+  background-color: black;
+  font-style: italic;
+}
+/* LVHA */
