--- a/UDEMY/03-CSS-Fundamentals/style.css
+++ b/UDEMY/03-CSS-Fundamentals/style.css
@@ -1,11 +1,11 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
-  font-family: Helvetica;
+* {
+  /* border-top: 10px solid #555; */
+}
+
+body {
   color: #444;
+  font-family: Helvetica;
+  border-top: 10px solid #1098ad;
 }
 
 h1,
@@ -136,4 +136,31 @@ a:active {
   background-color: black;
   font-style: italic;
 }
+
 /* LVHA */
+
+/* Resolvin conglicts */
+/* #copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green !important;
+} */
+
+/* nav a:link,
+nav p {
+  font-size: 18px;
+} */
+
+nav {
+  font-size: 18px;
+}
