--- a/UDEMY/Challenges/style.css
+++ b/UDEMY/Challenges/style.css
@@ -1,10 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: helvetica;
   line-height: 2;
 }
 /* PRODUCT */
+/* class product의 경우 보더를 포함한 전 영역을 가르킨다.
+그러므로 클래스를 추가할 필요없이 기존의 프로덕트로 진행한다. 결과물을 위해서 위와 이격 시키려면
+margin을 활용할 수 있다. */
 .product {
   border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
+  /* margin 00px auto; 를 실행할 경우 중심을 잡을 수 있다.
+  위, 아래가 붙어있다면 0 auto;를 하면되지만, 결과물은 아래와 위가 간격이 있는 형태이므로 간격을 제시하며
+  단위는 px를 사용하고 ,는 없어야한다. */
 }
 
 .product-title {
@@ -12,18 +25,22 @@ body {
   text-transform: uppercase;
   font-size: 22px;
   background-color: #f7f7f7;
+  padding: 15px;
+  /* 해당 공간은 border, margin(테두리 15xp 남기고 여백이 생김.)이 아닌 padding으로 조절할 수 있다.
+  */
 }
 
 /* PRODUCT INFORMATION */
 
 .price {
-  font-size: 30px;
+  font-size: 24px;
 }
 .free-shipping-css {
   color: #777;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 12px;
+  margin-bottom: 20px;
 }
 .more-information:link,
 .more-information:visited {
@@ -48,9 +65,16 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 16px;
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 .li-style {
   list-style: square;
+  margin-left: 20px;
+}
+
+.li-style li {
+  margin-bottom: 10px;
 }
 
 /* ADD TO CART */
@@ -61,6 +85,9 @@ body {
   font-size: 25px;
   text-transform: uppercase;
   cursor: pointer;
+  width: 100%;
+  padding: 15px;
+  border-top: 4px solid black;
 }
 .button-style:hover {
   color: #000;
