--- a/UDEMY/03-CSS-Fundamentals/style.css
+++ b/UDEMY/03-CSS-Fundamentals/style.css
@@ -10,11 +10,11 @@ body {
   color: #444;
   font-family: Helvetica;
   border-top: 10px solid #1098ad;
-  /* position: relative; */
+  position: relative;
 }
 
 .container {
-  width: 700px;
+  width: 800px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -35,10 +35,6 @@ body {
   /* height: 80px; */
 }
 
-.post-header {
-  margin-bottom: 40px;
-}
-
 nav {
   font-size: 18px;
 }
@@ -46,6 +42,11 @@ nav {
 article {
   margin-bottom: 60px;
 }
+
+.post-header {
+  margin-bottom: 40px;
+}
+
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
@@ -219,9 +220,37 @@ button {
   font-size: 20px;
   padding: 15px;
   cursor: pointer;
+
   position: absolute;
   bottom: 50px;
   right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+p::first-line {
+  font: red;
+}
+
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+
+h2::after {
+  content: "TOP";
+  background-color: yellow;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -15px;
+  right: -25px;
 }
 
 /* Resolvin conglicts */
