--- a/UDEMY/practiceCSS/01-03-box-sizing/index.css
+++ b/UDEMY/practiceCSS/01-03-box-sizing/index.css
@@ -7,6 +7,7 @@
   background-color: white;
   border: 3px solid blue;
   box-sizing: content-box;
+  padding: 50px;
 }
 .box2 {
   width: 200px;
@@ -14,10 +15,19 @@
   background-color: white;
   border: 3px solid red;
   box-sizing: border-box;
+  padding: 50px;
 }
 .box3 {
   width: 200px;
   height: 200px;
   background-color: white;
   border: 3px solid green;
+  /* padding: 50px; */
+}
+/* 박스사이즈의 값의 기본은 콘텐트박스이다. */
+
+.text {
+  width: 200px;
+  height: 50px;
+  background-color: red;
 }
