--- a/UDEMY/my-diary/index.css
+++ b/UDEMY/my-diary/index.css
@@ -1,3 +1,88 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  background: #eeeeee;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+}
+.wrapper {
+  width: 620px;
+  background-color: white;
+  border: 1px solid gray;
+  padding: 40px 30px;
+  border-radius: 10px;
+}
+
+.wrapper__head {
+  border-bottom: 1px dashed gray;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.wrapper__head__title {
+  font-size: 32px;
+  background-color: orange;
+  color: white;
+  text-align: center;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.wrapper__head__sub-title {
+  font-size: 18px;
+  padding: 10px 0;
+}
+
+#point {
+  color: orange;
+  font-size: 22px;
+  font-weight: bold;
+  text-decoration: underline;
+  margin-top: 15px;
+  display: block;
+}
+
+.wrapper__body {
+  border: 1px solid #dddddd;
+  padding: 20px 30px;
+}
+
+.diary-title {
+  font-size: 18px;
+  font-weight: 600;
+  background-color: #f4f4f4;
+  margin-bottom: 20px;
+}
+
+.kimchi {
+  color: red;
+  font-weight: 600;
+}
+
+.egg {
+  color: orange;
+  font-weight: 600;
+}
+
+.highlight {
+  color: blue;
+  font-size: 18px;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.diary-date {
+  color: #919191;
+  font-size: 14px;
+  text-align: right;
+}
+/* 
 body {
   border: 2px solid darkgray;
   border-radius: 10px;
@@ -5,8 +90,6 @@ body {
   margin: 100px auto;
   width: 600px;
 }
-/* .container {
-} */
 h1 {
   text-align: center;
   color: white;
@@ -30,9 +113,6 @@ h1 {
   padding: 10px 30px;
   border: 1px solid lightgray;
 }
-.wrapper__body__head__title {
-  background-color: lightgray;
-}
 .menu1 {
   color: red;
   font-weight: bold;
@@ -51,4 +131,5 @@ h1 {
   font-size: small;
   color: gray;
   text-align: right;
-}
+} 
+*/
